Core: Properly handle file path arguments with -client option

These paths come from the user, so the separators must be translated.

Fixes: QTCREATORBUG-27075
Change-Id: Ia20c2662d30626b8b7ed3dd19afb64a43c8a716f
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>